--- a/page/component/pages/swiper/swiper.wxml
+++ b/page/component/pages/swiper/swiper.wxml
@@ -1,50 +1,63 @@
-<import src="../../../common/head.wxml" />
-<import src="../../../common/foot.wxml" />
+<import src="../../../common/head.wxml"/>
+<import src="../../../common/foot.wxml"/>
 
 <view class="container">
-  <template is="head" data="{{title: 'swiper'}}"/>
+    <template is="head" data="{{title: 'swiper'}}"/>
 
-  <view class="page-body">
-    <view class="page-section page-section-spacing swiper">
-      <swiper indicator-dots="{{indicatorDots}}"
-        autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-        <block wx:for="{{background}}" wx:key="*this">
-          <swiper-item>
-            <view class="swiper-item {{item}}"></view>
-          </swiper-item>
-        </block>
-      </swiper>
-    </view>
-    <view class="page-section" style="margin-top: 40rpx;margin-bottom: 0;">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_switch">
-          <view class="weui-cell__bd">指示点</view>
-          <view class="weui-cell__ft">
-            <switch checked="{{indicatorDots}}" bindchange="changeIndicatorDots" />
-          </view>
+    <view class="page-body">
+        <view class="page-section">
+            <swiper class="imageContainer" bindchange="handleChange" previous-margin="50rpx" next-margin="50rpx" autoplay
+                    circular autoplay>
+                <block wx:for="{{3}}" wx:key="{{index}}">
+                    <swiper-item class="item">
+                        <image class="itemImg {{currentIndex == index ? 'active': ''}}"
+                               src="/image/city1.jpg" mode="aspectFill"></image>
+                    </swiper-item>
+                </block>
+            </swiper>
         </view>
-        <view class="weui-cell weui-cell_switch">
-          <view class="weui-cell__bd">自动播放</view>
-          <view class="weui-cell__ft">
-            <switch checked="{{autoplay}}" bindchange="changeAutoplay" />
-          </view>
+
+        <view class="page-section page-section-spacing swiper">
+            <swiper indicator-dots="{{indicatorDots}}"
+                    autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+                <block wx:for="{{background}}" wx:key="*this">
+                    <swiper-item>
+                        <view class="swiper-item {{item}}"></view>
+                    </swiper-item>
+                </block>
+            </swiper>
         </view>
-      </view>
+
+        <view class="page-section" style="margin-top: 40rpx;margin-bottom: 0;">
+            <view class="weui-cells weui-cells_after-title">
+                <view class="weui-cell weui-cell_switch">
+                    <view class="weui-cell__bd">指示点</view>
+                    <view class="weui-cell__ft">
+                        <switch checked="{{indicatorDots}}" bindchange="changeIndicatorDots"/>
+                    </view>
+                </view>
+                <view class="weui-cell weui-cell_switch">
+                    <view class="weui-cell__bd">自动播放</view>
+                    <view class="weui-cell__ft">
+                        <switch checked="{{autoplay}}" bindchange="changeAutoplay"/>
+                    </view>
+                </view>
+            </view>
+        </view>
+
+        <view class="page-section page-section-spacing">
+            <view class="page-section-title">
+                <text>幻灯片切换时长(ms)</text>
+                <text class="info">{{duration}}</text>
+            </view>
+            <slider bindchange="durationChange" value="{{duration}}" min="500" max="2000"/>
+            <view class="page-section-title">
+                <text>自动播放间隔时长(ms)</text>
+                <text class="info">{{interval}}</text>
+            </view>
+            <slider bindchange="intervalChange" value="{{interval}}" min="2000" max="10000"/>
+        </view>
     </view>
 
-    <view class="page-section page-section-spacing">
-      <view class="page-section-title">
-        <text>幻灯片切换时长(ms)</text>
-        <text class="info">{{duration}}</text>
-      </view>
-      <slider bindchange="durationChange" value="{{duration}}" min="500" max="2000"/>
-      <view class="page-section-title">
-        <text>自动播放间隔时长(ms)</text>
-        <text class="info">{{interval}}</text>
-      </view>
-      <slider bindchange="intervalChange" value="{{interval}}" min="2000" max="10000"/>
-    </view>
-  </view>
-
-  <template is="foot" />
+    <template is="foot"/>
 </view>
