--- a/page/component/pages/swiper/swiper.wxss
+++ b/page/component/pages/swiper/swiper.wxss
@@ -26,3 +26,30 @@ button:last-child{
 .page-foot{
   margin-top: 50rpx;
 }
+
+/* 3D 轮播 */
+.imageContainer{
+  width: 100%;
+  height: 500rpx;
+  background: #000;
+}
+.item{
+  height: 500rpx;
+}
+.itemImg{
+  position: absolute;
+  width: 100%;
+  height: 380rpx;
+  border-radius: 10rpx;
+  z-index: 5;
+  opacity: 0.7;
+  top: 13%;
+}
+.active{
+  opacity: 1;
+  z-index: 10;
+  height: 430rpx;
+  top: 7%;
+  transition:all .2s ease-in 0s;
+}
+/* 3D 轮播 */
